<resources>
    <string name="app_name">NCSDemo</string>
    <string name="status_list">Device List</string>
    <string name="status_removed">Device Detached</string>
    <string name="status_added">Device Attached</string>
    <string name="run_ncs">Run NCS</string>
    <string name="run_snpe">Run SNPE</string>
    <string name="select_model">Select Model</string>
    <string name="select_image">Select Image</string>
    <string name="detached">Detached</string>
    <string name="not_found">Not Found</string>
    <string name="attached">Attached</string>
    <string name="device_status">NCS Device Status:</string>
    <string name="threads">CPU Threads:</string>
    <string name="bench">Bench</string>
    <string name="gpu">GPU</string>
    <string name="dsp">DSP</string>
    <string name="cpu">CPU</string>
    <string name="gpu_16">GPU16</string>
    <string name="tf_lite">TF</string>
    <string name="run_tf">Run TF</string>
    <string-array name="threads">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
    </string-array>
</resources>
