<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/option_lr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/select_graph_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:gravity="center"
            android:onClick="selectModel"
            android:padding="10dp"
            android:text="@string/select_model"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/select_image_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:gravity="center"
            android:onClick="selectImage"
            android:padding="10dp"
            android:text="@string/select_image"
            android:textAllCaps="false" />

        <Switch
            android:id="@+id/bench_sw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/bench" />


    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/option_lr"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/dsp_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/dsp" />

        <RadioButton
            android:id="@+id/gpu_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/gpu" />

        <RadioButton
            android:id="@+id/cpu_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/cpu" />

        <RadioButton
            android:id="@+id/gpu_16_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1.5"
            android:onClick="onRadioButtonClicked"
            android:text="@string/gpu_16" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/option_lr2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg">

        <Button
            android:id="@+id/run_ncs_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:onClick="runInference"
            android:padding="10dp"
            android:text="@string/run_ncs"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/run_snpe_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:onClick="runInference"
            android:padding="10dp"
            android:text="@string/run_snpe"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/run_offload_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:onClick="runInference"
            android:padding="10dp"
            android:text="@string/run_offload"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/device_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/option_lr2"
        android:gravity="start"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/device_status"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/device_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/option_lr2"
        android:layout_toEndOf="@+id/device_tv"
        android:paddingBottom="10dp"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/status_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_tv"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="bottom"
        android:maxLines="30"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:textSize="14sp"
        android:typeface="monospace" />

</RelativeLayout>